--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
     "dependencies": {
-        "axios": "^1.6.7",
         "colors": "^1.4.0",
         "dotenv": "^16.4.1",
         "express": "^4.18.2",
@@ -18,5 +17,8 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "description": ""
+    "description": "",
+    "devDependencies": {
+        "nodemon": "^3.1.0"
+    }
 }
