--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "express": "^4.18.2",
         "openai": "^4.26.1",
         "play-sound": "^1.1.6",
+        "say": "^0.16.0",
         "socket.io": "^4.7.4"
     },
     "name": "seniorproject",
